added vaidation, error handleing, added contacts route and controller
